--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -1,10 +1,6 @@
-The Spyder Doc Contributors are composed of:
+The Spyder-Infra Contributors are composed of:
 
-* Pierre Raybaut <pierre.raybaut@gmail.com> (Original Spyder author)
 * Carlos Cordoba <ccordoba12@gmail.com> (Current Spyder maintainer)
-* C.A.M. Gerlach <CAM.Gerlach@Gerlach.CAM> (Current docs maintainer)
-* All other developers who have committed to the spyder-docs repository:
-  <https://github.com/spyder-ide/spyder-docs/graphs/contributors>
-  and contributors to the original documentation in the main spyder repository:
-  <https://github.com/spyder-ide/spyder/commits/master/doc>
-  <https://github.com/spyder-ide/spyder/tree/08338542a1c66c1081a8634625279a92e6b3b92b/doc>
+* _FIXME_MAINTAINER_NAME <_FIXME_MAINTAINER_EMAIL> (Current Spyder-Infra maintainer)
+* All other developers who have committed to the Spyder-Infra repository:
+  <https://github.com/spyder-ide/spyder-infra/graphs/contributors>
